tdf#115718 Fix Watch Window EditBox

For KDE4 only: this change reintroduces QStyle::PE_PanelLineEdit for
the EditBox/LineEdit widget. This allows the contents of the
Watch Window EditBox to be amended as one would expect.

Change-Id: Iffd7498d5f553ac0c9c612bf36b9f23d9eb8f86d